# unzipall

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
src/unzipall/: __init__.py  cli.py  core.py  exceptions.py
